tests/paczka1/fuzzy1/26217510.err
Error in line 7: qT0k S475 84,1
Error in line 9: qT0k S59 54,0
Error in line 4: 9PLDv A851 78,1
Error in line 21: A851 A851 9,6
Error in line 26: 6vsB A851 8,26
Error in line 20: 5Bt A851 77,4
